# hermesbenchv0_1

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DEPRECATED.md  Makefile  PLAN_ANALYSIS.md  PLAN_ENHANCEMENT.md  PLAN_V0_2.md  PLAN_V0_2_REBUILT.md  PLAN_VIDEO.md  README.md  RUBRIC_ANALYSIS.md  RUBRIC_V0_2.md  hermesbench.yaml.example  install.sh  project.md  pyproject.toml  rubric.md
.github/workflows/: ci.yml
docs/: CHANGELOG.md  GETTING_STARTED.md  MERGE_STATUS.md  PROVIDERS.md  RUN_LAYOUT.md  adding_backends.md  diagnosing_zero_scores.md  glossary.md  trace_format_reconciliation.md
docs/plans/: PLAN_ANALYSIS.md  PLAN_VIDEO.md
fixtures/: README.md
fixtures/small_repo/: big_block.py  big_file.py  buggy.py  dup_strings.py  multi.py  target.py
hermesbench/: __init__.py  __main__.py  cli.py  compare.py  config.py  event_timeline.py  hermes_invocation.py  hf_video.py  metrics_panel.py  preflight.py  record.py  render.py  report.py  reporting.py  run_real.py  runner.py  scoring.py  serve.py  setup_env.py  sft_export.py  trace.py  types.py
hermesbench/backend/: __init__.py  base.py  recorder.py  registry.py  tmux_isolated.py  worktree.py
hermesbench/statsd/: __init__.py  __main__.py  collector.py  pinning.py
hermesbench/statsd/sources/: __init__.py  cpu.py  (+4 more)
presets/: README.md  weak_categories_grok.json
scripts/: bootstrap.sh  build_event_timeline.py  build_hf_grok_index.py  fake_hermes.py  fake_model_server.py  generate_tasks.py  record_live_benchmark.sh  run_real_model_benchmark.py
tasks/: README.md
tasks/_template/: task.yaml  verifier.py
tests/: test_cli.py  test_config.py  test_event_timeline.py  test_fixture_integrity_cli.py  test_lint_fixture_sizes.py  test_lint_fixtures.py  test_lint_verifiers.py  test_recorder.py  test_run_real_endpoint.py  test_run_real_infra_error.py  test_run_real_infra_success_exit.py  test_run_real_resume.py  test_run_real_trajectory_selection.py  test_runner_paths.py  test_scoring.py  test_scoring_v2.py  test_sft_export.py  test_smoke.py  test_statsd.py  test_statsd_pinning.py  test_statsd_sources.py  test_step37_method_fixes.py  test_t04_regex_verifier.py  test_toolsets.py  test_trace.py  test_verifier_contract.py
tests/support/: fake_hermes.py
video/hf-scoreboard/: DESIGN.md  index.html  meta.json  package.json
(+354 files in other folders)
