[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermesbench"
version = "0.1.0"
description = "Hermes Agent benchmark v0.1 — evaluate local models on the actual tool-calling patterns Hermes users hit"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "am" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pyyaml>=6.0",
    "pyte>=0.8.1",
    "psutil>=5.9",
    "pynvml>=11.5",
    "py-cpuinfo>=9.0",
    "rich>=13.7",
    "click>=8.1",
    "aiohttp>=3.9",
    "matplotlib>=3.8",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.optional-dependencies]
dev = ["pre-commit>=3.7", "uv>=0.1"]

[project.scripts]
hermesbench = "hermesbench.cli:main"

[project.urls]
Homepage = "https://github.com/am423/hermesbenchv0_1"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermesbench*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "T20", "T201", "SIM", "RUF"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
exclude = ["tests/", "fixtures/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["hermesbench"]
omit = ["tests/*", "hermesbench/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
